# Procuator

./: .dockerignore  .gitignore  README.md  architecture.md  architecture.yml  compose.yml  engineering.md  package.json  procuator.md  workflow.md
.github/workflows/: ci.yml  deploy-code-engine.yml
apps/api/: Dockerfile  README.md  pyproject.toml  requirements.txt  supply_risk_checker.py
apps/api/assets/orchestrate/: import_agents.sh  procuator_agent_spec.yml  procuator_orchestrator.yml  procurement_decision_flow.yml
apps/api/assets/orchestrate/agents/: action_agent.yml  analysis_agent.yml  decision_agent.yml  perception_agent.yml  policy_agent.yml
apps/api/assets/orchestrate/tools/python/: _parsing.py  approve_referral.py  decision_analytics.py  demo_scenarios.py  deny_referral.py  health.py  list_referrals.py  policy_check.py  procurement_decision.py  supplier_risk_checker.py
apps/api/assets/prompts/: procurement_decision_cot.yml  procurement_decision_v1.yml
apps/api/src/procuator/: cli.py  config.py
apps/api/src/procuator/api/: app.py
apps/api/src/procuator/data/: demo_scenarios.py  generator.py
apps/api/src/procuator/skills/: decision_auditor.py  policy_engine.py  supplier_risk_checker.py
apps/api/tests/: test_api.py  test_generator.py  test_policy_engine.py  test_risk_checker.py
apps/web/: Dockerfile  README.md
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/analytics/: page.tsx
apps/web/src/components/: Field.tsx  GlassCard.tsx  JsonBlock.tsx  Nav.tsx
docs/screenshots/: README.md
scripts/: dev.sh
(+4 files in other folders)
